removed dumb scrollbars I was too lazy to fix for a while lol

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #282c34;
+  overflow: hidden;
 }
 
 canvas {
